css/embedded/files-music-player.css
/**
 * Nextcloud Music app
 *
 * This file is licensed under the Affero General Public License version 3 or
 * later. See the COPYING file.
 *
 * @author Pauli Järvinen <pauli.jarvinen@gmail.com>
 * @copyright Pauli Järvinen 2017 - 2026
 */

#music-controls .icon-music-dark {
	background-image: url(../../img/music-dark.svg);
}

#music-controls .icon-radio-nav {
	background-image: url(../../img/radio.svg);
}

#music-controls {
	width: 100%;
	padding: 0 20px 0 20px;
	position: fixed;
	bottom: 0;
	background-color: var(--color-main-background-translucent, rgba(255, 255, 255, .95));
	z-index: 50;
	text-align: start;

	/* For NC25+: */
	margin-bottom: var(--body-container-margin);
	border-end-end-radius: var(--body-container-radius);
}

#music-controls #music-song-area {
	height: 66px;
	width: 100%;
	white-space: nowrap;
}

#music-controls #playlist-area {
	display: none;
	width: 100%;
	height: 24px;
}

#music-controls.with-playlist #playlist-area {
	display: block;
}

#music-controls #playlist-area > span {
	margin-top: 5px;
	margin-inline-start: 10px;
	font-size: 14px;
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: pre;
}

#music-controls #playlist-area #playlist-name {
	inset-inline-start: 10px;
	font-weight: bold;
	max-width: 66%;
}

#music-controls #playlist-area #menu-container {
	position: absolute;
	margin-inline-start: 10px;
}

#music-controls #playlist-area .icon-more {
	border: none;
	background-color: transparent;
	vertical-align: top;
	min-height: 18px;
	margin-top: 8px;
	opacity: .4;
}

#music-controls #playlist-area .icon-more:hover {
	opacity: 1.0;
}

#music-controls, #music-controls * {
	display: inline-block;
	box-sizing: border-box;
}

#music-controls .time-separator {
	display: inline;
}

#music-controls .control {
	height: 52px;
	width: 64px;
	padding: 10px;
	margin: 9px 0px 5px;
	cursor: pointer;
	opacity: .4;
}

#music-controls .control.disabled {
	cursor: default !important;
	opacity: .15 !important;
}

#music-controls .control.small {
	height: 44px;
	width: 44px;
	margin: 13px 0px 9px;
}

#music-controls .control#close {
	height: 46px;
	width: 46px;
	margin: 0;
	padding: 15px;
	position: absolute;
	inset-inline-end: 0;
	top: 0;
}

#music-controls .control:hover:not(.disabled),
#music-controls .control:focus:not(.disabled) {
	opacity: 1;
}

#music-controls .control.volume-percent:hover:not(.disabled) {
	opacity: .4;
	cursor: default;
}

#music-controls .svg {
	filter: var(--background-invert-if-dark);
}

#music-controls #albumart-container {
	position: relative;
	width: 50px;
	height: 50px;
	margin: 8px 12px 8px 20px;
}

#music-controls #albumart {
	position: absolute;
	height: 100%;
	width: 100%;
	background-size: cover;
	background-position: center;
	display: inline-block;
	border-radius: var(--music-albumart-small-border-radius);
}

#music-controls #albumart-container.icon-loading #albumart {
	opacity: 0.2;
}

#music-controls #info-and-progress {
	display: inline-block;
	position: absolute;
	inset-inline-start: 260px;
	inset-inline-end: 180px;
	width: auto;
	height: 100%;
}

#music-controls #song-info {
	height: 100%;
	width: 50%;
	margin-top: 7px;
	vertical-align: top;
}

#music-controls #song-info span {
	width: 100%;
	text-overflow: ellipsis;
	white-space: nowrap;
	overflow: hidden;
	vertical-align: top;
}

#music-controls #title {
	font-weight: bold;
	font-size: 21px;
	line-height: 29px;
}

#music-controls .music-progress-info {
	width: 45%;
	margin: 9px auto 25px auto;
	white-space: normal;
}

#music-controls .music-volume-control {
	position: absolute;
	inset-inline-end: 54px;
}

